--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,6 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702359.md#1" target="_blank">“站在港人一边” 香港黄店生意不跌反升</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/023-150x120.jpg" align ="left"></a>反送中运动持续多月，香港许多店家用各种方式声援示威者，示威者也以消费回报这些“黄店”的义举。知名黄店龙门冰室老板张俊杰指，他宁愿放弃大陆客市场，站在港人一边，生意由下跌反升4成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702368.md#1" target="_blank">亲共港议员何君尧 被发现办事处人去楼空</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hk-lawmaker-150x120.png" align ="left"></a>香港亲共立法会议员何君尧在11月24日的区议会选举落败之后，被民众揶揄为“何已完”（与广东话的“何议员”同音）。最近有民众发现，他在荃湾的办事处已人去楼空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11701874.md#1" target="_blank">杭州访民维权十年无果 被当局绑架至黑监狱</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11701874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13869068-150x120.jpg" align ="left"></a>杭州萧山区访民凤加文、凤雅两姊妹，因拆迁问题上访了十余年未获解决。今年9月，姊妹俩在朋友家作客，被突然闯进来的便衣（警察）绑架至萧山区看守所关押，并以判重刑胁迫签（拆迁）协议书。37天后凤加文被取保候审，凤雅至今还关押在看守所。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 3:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702109.md#1" target="_blank">美议员提案阻止世银贷款给中共 专家支持</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-167978626-150x120.jpg" align ="left"></a>美国对冲基金大佬、海曼资本管理公司（Hayman Capital Management）创办人巴斯（Kyle Bass）在周三（12月4日）表示，他支持一项由美国国会议员提出、旨在制止世界银行贷款给中共的法案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank">百度又曝丑闻 收钱推广假药 逾五千人受骗</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11701699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9e0d556bcec963c0587ddf34dbb3db62-600x400-150x120.jpg" align ="left"></a>由李彦宏掌舵的大陆搜索引擎百度丑闻不断。近日百度再卷入推广假药案，该案案发至今全国共有5000多人受骗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 2:10 PM							</td></tr>
@@ -19,6 +17,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701266.md#1" target="_blank">时值岁末 中国A股市场个股异动风险加剧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1601260306081664-150x120.jpg" align ="left"></a>时值岁末，中国A股市场走势不容乐观，市场预计第四季度可能还会以累计下跌收场。同时，A股市场近日出现亏损上市公司涨停潮、市值千亿股票暴跌潮，令市场的风险担忧加剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank">海外华人注意 微信审查来加拿大了</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/wechat-tencent-150x120.jpg" align ="left"></a>众所周知，中共一直通过各种网络平台控制中国民众的舆论。近来，这种控制事例在加拿大越来越多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank">习近平6年“脱贫”期限近 各地政府忙造假</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fupin-150x120.jpg" align ="left"></a>中共总书记习近平曾提出“2020年全民脱贫”的政纲，然而2020年将至，许多地方干部恐惧因无法达到要求遭到问责，而纷纷演戏造假。所谓2020年消灭绝对贫困人口，是否梦一场呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 7:43 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701222.md#1" target="_blank">新疆大规模收缴哈萨克文书籍 各院校成重点</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-150x120.png" align ="left"></a>近日，中共新疆政府开始了自2017年以来，第三次大规模收缴哈萨克文书籍的运动，主要针对学校及图书馆，强逼学生交出哈萨克文读物 。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701183.md#1" target="_blank">中共强推“清洁煤” 致6人死亡 数十人住院</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701183.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>中共当局此前推行的“煤改气”工程并禁止农户烧煤的强制性政策备受舆论诟病。近期，中共当局再出新规，在农村地区强制推广“清洁煤”，致6位村民因一氧化碳中毒死亡，此外还有数十人住院治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700732.md#1" target="_blank">承德公安绑架34名法轮功学员 13人遭构陷</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/banner-600x400-150x120.jpg" align ="left"></a>10月20日，围场县公安局向围场县检察院非法起诉，13位法轮功学员被构陷到滦平县检察院。法轮功学员王永兴和陈海东在关押中出现病危状况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 6:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank">【新闻看点】接连受重击 北京最大噩梦要来了</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700803.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/19-12-023.32-150x120.jpg" align ="left"></a>最近中共接连遭受重击，国际社会几乎形成了联动，纷纷针对中共出台各项措施。而在国内，广东茂名村民经过3天勇武抗争，终于迫使当局公开让步道歉。几天来，国际加紧围猎封堵中共，国内民众勇武抗争成功，北京最大的噩梦要来了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:41 AM							</td></tr>
@@ -27,7 +26,8 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank">关系紧张之际 美中两军参谋长首次通话</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-590013154-150x120.jpg" align ="left"></a>就在美国总统川普签署香港人权法案，众议院通过新疆法案先后引发中共跳脚回应之际，美国和中国军方最高官员进行了通话，力图缓和香港人权法通过后的紧张气氛。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank">美专家：若消息属实 向心夫妇或自愿留台湾</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Capture-2-150x120.jpg" align ="left"></a>中共情报人员王立强投诚澳洲后，在国际社会激起了巨大反响。王立强指证的上司中创董事会主席向心、龚青夫妇，在离境台湾时，被移送台北地检署复查，被限制出境、出海。最新消息透露，向心、龚青夫妇选择自愿留在台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 5:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701075.md#1" target="_blank">老字号全聚德高管离职 股东逃离 面临退市</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/VCG11394024089-150x120.jpg" align ="left"></a>近日，全聚德发布公告，宣布公司董事、总经理张力辞职。股东也“逃离”。业内认为，高管辞职与其近年来业绩持续低迷有关。具有155年历史的全聚德面临退市的困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11702307.md#1" target="_blank">浏阳烟花厂爆炸7死 厂房成平地 汽车炸变形</a><br></h3>昨日（12月4日），湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区发生爆炸后，已致7人死13人受伤。今日（12月5日）有消息指，当时厂房炸成废墟，面包车都被炸得扭曲变形，现场还升起蘑菇云状黑烟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank">供应链转移 美中型企业寻找中国以外市场</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11701063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/6e495e577ecf267edd6e32add6991dd3-150x120.jpg" align ="left"></a>不仅卡特彼勒以及孩之宝（Hasbro）等大型公司受到美中贸易战的冲击，周三（12月4日）发布的一份调查报告显示，美国中型企业已经开始寻找中国以外的客户销售产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank">台湾6成3民众相信中共干预台大选</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/4/n11700274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4de44ffad1ffa91abe3b530535c11d56-150x120.jpg" align ="left"></a>台湾制宪基金会4日发布“中国在台湾选举中扮演的角色：最新2020总统与立委选情”民调结果显示，63.3%受访者相信中国（中共）企图利用各种方式来影响台湾2020年总统选举结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/5/n11701869.md#1" target="_blank">广东一木材厂着火延烧3栋民宅 现场有油罐</a><br></h3>12月5日早上9点30分许，广东省清远市清城区一木材厂发生火灾，着火面积约700平方米，并延烧到隔壁的三栋居民楼。同时，现场有三只油罐。但着火原因依然不明。
 
 中共央视新闻客户端披露上述消息。据流出视频显示，现场多处木材垛同时着火，火势燃烧猛烈，居民楼底层也着火，现场浓烟滚滚。
